@@ -1,3 +1,8 @@
+Thu Mar 10 15:19:54 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* node.c (dump_option): nd_compile_option is a hidden hash object,
+	  cannot call inspect on it.
+
 Thu Mar 10 09:49:54 2016  Rei Odaira  <Rei.Odaira@gmail.com>
 
 	* test/socket/test_socket.rb (test_udp_recvmsg_truncation):
